Finalization: To have check box to select and Un Select Claims and Just to have one global finalize Button - changes

--- a/css/style.css
+++ b/css/style.css
@@ -1664,3 +1664,12 @@ footer {
     font: 13px "open_sanssemibold";
     color: #333333;
 }
+
+.l-8 {
+    left: 8px;
+}
+
+.btn-finalize {
+    margin-top: 0.5% !important;
+    margin-right: 2% !important;
+}
