--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -18,7 +18,7 @@
                                 </div>
                                 <div style="border-left: 1px solid #e6e6e6;width: 100% !important;">
                                     <md-input-container flex-gt-sm>
-                                        <label>Member Number</label>
+                                        <label>Member Card Number</label>
                                         <input ng-model="memberNumber">
                                     </md-input-container>
                                 </div>
@@ -60,7 +60,7 @@
                                             <span class="fa" ng-show="propertyName == 'referenceNumber'" ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span> 
                                         </th>
                                         
-                                        <th ng-click="sortBy('memberNumber')">Member Number
+                                        <th ng-click="sortBy('memberNumber')">Member Card Number
                                             <span class="fa" ng-show="propertyName == 'memberNumber'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('memberName')">Member Name
