--- a/resources/finalization/view/finalization.html
+++ b/resources/finalization/view/finalization.html
@@ -18,19 +18,19 @@
                             <input ng-model="SelectBatch">
                         </md-input-container>
                     </div>
-                    <div class="col-sm-2" style="border-left: 1px solid #e6e6e6;">
+                    <div class="col-sm-3" style="border-left: 1px solid #e6e6e6;">
                         <md-input-container flex-gt-sm>
-                            <label>Batch ID</label>
+                            <label>Claim Number</label>
                             <input ng-model="BatchId">
                         </md-input-container>
                     </div>
-                    <div class="col-sm-2" style="border-left: 1px solid #e6e6e6; min-width:230px;">
+                    <!-- <div class="col-sm-2" style="border-left: 1px solid #e6e6e6; min-width:230px;">
                         <md-input-container flex-gt-sm>
                             <label>Batch Filename</label>
                             <input ng-model="BatchFileName">
                         </md-input-container>
-                    </div>
-                    <div class="searchColm align-middle text-center col-sm-2">
+                    </div> -->
+                    <div class="searchColm align-middle text-center col-sm-3">
                         <a ng-click="click()" href="javascript:;" class="searBtn searBtnWithText mt-3 ml-3 mr-3 align-middle">
                             <span class="oi align-middle" data-glyph="magnifying-glass"></span> Search
                         </a>
@@ -63,50 +63,52 @@
                                     </tr>
                                     <tr ng-repeat="d in data | orderBy:orderByField:reverseSort">
                                         <td>
-                                            <span class="d-inline-block pr-2">Batch ID: {{d.batch}}</span>{{d.name}}
-                                            <div class="text-nowrap">
-                                                <strong class="d-inline-block">Batch file Name: {{d.batchFileName}}</strong>
+                                            <div class="d-inline-block pr-2">Claim Number: 
+                                                <span class="currencyTypeCustom">{{d.batch}}</span>
                                             </div>
+                                            <!-- <div class="text-nowrap">
+                                                <strong class="d-inline-block">Batch file Name: {{d.batchFileName}}</strong>
+                                            </div> -->
                                             <div class="text-nowrap clearfix">
                                                 <span class="oi"></span>
                                                 <div class="receiveInfo d-inline-block pr-3 float-left">
                                                     <span class="oi" data-glyph="timer"></span>Received Date {{d.receivedDate}}
                                                 </div>
-                                                <div ng-if="d.status == 'Rejected'" class="statusInfo d-inline-block text-danger float-right">
-                                                    <span class="oi" data-glyph="thumb-down"></span> Rejected
+                                                <div class="statusInfo d-inline-block float-left" ng-class="{'text-danger' : d.status == 'Rejected', 'text-success' : d.status == 'Approved'}">
+                                                    <span class="oi" data-glyph="thumb-down"></span> {{d.status == 'Rejected' ? 'Rejected' : 'Approved'}}
                                                 </div>
-                                                <div ng-if="d.status == 'Approved'" class="statusInfo d-inline-block text-success float-right">
+                                                <!-- <div ng-if="d.status == 'Approved'" class="statusInfo d-inline-block text-success float-right">
                                                     <span class="oi" data-glyph="thumb-up"></span> Approved
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </td>
                                         <td>
-                                            <div class="text-nowrap">
+                                            <!-- <div class="text-nowrap">
                                                 <span class="tablLal">Paid To Provider Code:</span>
                                                 <span class="tablCont">{{d.PaidToProviderCode}}</span>
                                             </div>
                                             <div class="text-nowrap">
                                                 <span class="tablLal">Paid To Provider Name:</span>
                                                 <span class="tablCont">{{d.PaidToProviderName}}</span>
-                                            </div>
+                                            </div> -->
                                             <div class="text-nowrap">
-                                                <span class="tablLal">Paid To:</span>
+                                                <span class="tablLal" style="display: contents !important;">Paid To:</span>
                                                 <span class="tablCont">{{d.PaidTo}}</span>
                                             </div>
                                         </td>
                                         <td class="processedStatus">
-                                            <div class="btn btn-outline-success btn-sm d-block">Processed: {{d.Processed}}</div>
-                                            <div class="btn btn-outline-danger btn-sm d-block">Un Processed: {{d.unProcessed}}</div>
+                                            <!-- <div class="btn btn-outline-success btn-sm d-block">Processed: {{d.Processed}}</div>
+                                            <div class="btn btn-outline-danger btn-sm d-block">Un Processed: {{d.unProcessed}}</div> -->
                                         </td>
                                         <td>
                                             <div class="text-nowrap">
                                                 <strong class="tablLal tablLal1">Rejected Amount:</strong>
                                                 <strong>Rs.{{d.rejectedAmount}}</strong>
                                             </div>
-                                            <div class="text-nowrap">
+                                            <!-- <div class="text-nowrap">
                                                 <strong class="tablLal tablLal1">Batch Paid Amount:</strong>
                                                 <strong>Rs.{{d.batchPaidAmount}}</strong>
-                                            </div>
+                                            </div> -->
                                             <div class="text-nowrap">
                                                 <strong class="tablLal tablLal1">Payment Way:</strong>
                                                 <strong>{{d.paymentWay}}</strong>
