PopUp Change in ReimbursementClaim..

--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -506,8 +506,8 @@
             </div>
             
             <footer class="clearfix">
-                <button type="button" class="btn btn-primary btn-sm float-right ml-3 mt-3">Submit for Approval</button>
-                <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3  mt-3">Reject</button>
+                <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3 mt-3" ng-click="approveClaim();">Submit for Approval</button>
+                <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3  mt-3" ng-click="rejectClaim();">Reject</button>
                 <ul class="float-right clearfix mt-1">
                     <li class="float-left">
                         <span>Total deduction</span>
